flux/apps/ai/llm/catalog/qwen3-6-27b/app/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qwen3-6-27b-ai
spec:
  parentRefs:
    - name: agenticgateway-internal
      namespace: agenticgateway
      sectionName: https
  hostnames:
    - ai.nahsi.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/chat/completions
          headers:
            - type: Exact
              name: X-Gateway-Base-Model-Name
              value: Qwen/Qwen3.6-27B
      backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: qwen3-6-27b-llm
